librefm integration started

--- a/PrimePlayer/options.html
+++ b/PrimePlayer/options.html
@@ -10,6 +10,10 @@
     <h1></h1>
     <fieldset>
       <legend id="legendLastfm"></legend>
+      <div class="v-2.13">
+        <input id="libreFm" type="checkbox"/>
+        <label for="libreFm"></label>
+      </div>
       <div id="lastfmStatus">
         <span></span>
         <a target="_blank" class="disconnected"></a>
